--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ compiler:
   - clang
   - gcc
 
-addons: 
-  apt: 
-    packages: libboost-all-dev
+before_install:
+  - sudo add-apt-repository ppa:kzemek/boost -y
+  - sudo apt-get update -q
+  - sudo apt-get install libboost-dev -y
 
 script: 
   - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && cmake --build . && ./tests_big && ./tests_little
