--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
 before_install:
   - sudo add-apt-repository ppa:kzemek/boost -y
   - sudo apt-get update -q
-  - sudo apt-get install libboost-dev -y
+  - sudo apt-get install libboost1.58-dev -y
 
 script: 
   - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && cmake --build . && ./tests_big && ./tests_little
