--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,21 @@
 [submodule "googletest"]
 	path = googletest
 	url = https://github.com/google/googletest
+[submodule "boost/preprocessor"]
+	path = boost/preprocessor
+	url = https://github.com/boostorg/preprocessor
+[submodule "boost/endian"]
+	path = boost/endian
+	url = https://github.com/boostorg/endian
+[submodule "boost/config"]
+	path = boost/config
+	url = https://github.com/boostorg/config
+[submodule "boost/predef"]
+	path = boost/predef
+	url = https://github.com/boostorg/predef
+[submodule "boost/core"]
+	path = boost/core
+	url = https://github.com/boostorg/core
+[submodule "boost/static_assert"]
+	path = boost/static_assert
+	url = https://github.com/boostorg/static_assert 
