--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,7 @@
 	url = https://github.com/boostorg/core
 [submodule "boost/static_assert"]
 	path = boost/static_assert
-	url = https://github.com/boostorg/static_assert 
+	url = https://github.com/boostorg/static_assert
+[submodule "boost/type_traits"]
+	path = boost/type_traits
+	url = https://github.com/boostorg/type_traits
