--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ compiler:
   - clang
   - gcc
 
-before_install:
-  - sudo add-apt-repository ppa:kzemek/boost -y
-  - sudo apt-get update -q
-  - sudo apt-get install libboost1.58-dev -y
-  - sudo apt-get install qtbase5-dev -y
+addons:
+  apt:
+    packages:
+      - libboost-latest-dev
+      - qtbase5-dev
 
 script: 
   - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && cmake --build . && ./tests_big && ./tests_little && ./test_extension_qt
