--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ addons:
       - qtbase5-dev
 
 script: 
-  -  git submodule update --init googletest && mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && cmake --build . && ./tests_big && ./tests_little && ./test_extension_qt
+  -  conan install . && mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && cmake --build . && ./tests_big && ./tests_little && ./test_extension_qt
