--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,7 +13,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - uses: grisumbras/conan-actions/install@master
+    - name: install conan
+      run: pip install conan
+    - name: get conan packages
+      run: conan install .
     - name: Build and test
       uses: nicledomaS/cmake_build_action@v1
       with:
