--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -7,14 +7,16 @@ jobs:
     
     strategy:
       matrix:
-        os: ['ubuntu-latest', 'windows-2016', 'windows-2019', 'macOS-latest']
+        os: ['windows-2016', 'windows-2019', 'macOS-latest']
 
     runs-on: ${{ matrix.os }}
     
     steps:
     - uses: actions/checkout@v2
     - name: install conan
-      run: pip install conan && conan install .
+      run: |
+        pip install conan
+        conan install .
     - name: Build and test
       uses: nicledomaS/cmake_build_action@v1
       with:
