--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
+      if: ${{ runner.os != 'Windows' }}
     - name: install conan
       run: |
         pip install conan
@@ -23,4 +24,5 @@ jobs:
       uses: nicledomaS/cmake_build_action@v1
       with:
         run_tests: ON
+        cmake_args: -DDISABLE_QT_TEST:bool=${{ runner.os == 'Windows' }}
     
