--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
-      if: ${{ runner.os != 'Windows' }}
+      if: runner.os != 'Windows'
     - name: install conan
       run: |
         pip install conan
