--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Run tests
 
 on: [push]
 
@@ -46,7 +46,6 @@ jobs:
       uses: nicledomaS/cmake_build_action@v1
       with:
         run_tests: True
-        unit_test_build: True
         cmake_args: -DDISABLE_QT_TEST:bool=${{ runner.os == 'Windows' }}
 
 #      uses: lukka/run-cmake@v0.10
